Integration with Insights Storage Service (ISS) through GraphQL server

--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "start": "nodemon -x tsx lib/index.js",
     "dev": "npm run build && npm run start",
-    "build": "swc --strip-leading-paths --delete-dir-on-start -d lib src",
+    "build": "swc --strip-leading-paths --delete-dir-on-start -d lib src && cp src/transac-ai-services/pbs/*.proto lib/transac-ai-services/pbs",
     "lint": "pnpm eslint .",
     "format": "pnpm prettier . --write",
     "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest --no-watchman",
+    "buildandtest": "pnpm build && pnpm test",
     "predeploy": "pnpm lint && pnpm format && pnpm build && pnpm test"
   },
   "keywords": [
@@ -40,7 +41,10 @@
   "dependencies": {
     "@genkit-ai/dotprompt": "^0.5.17",
     "@genkit-ai/flow": "^0.5.17",
+    "@grpc/grpc-js": "^1.12.2",
+    "@grpc/proto-loader": "^0.7.13",
     "@oconva/qvikchat": "^2.0.4",
+    "dotenv": "^16.4.5",
     "zod": "^3.23.8"
   }
 }
