--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@grpc/proto-loader": "^0.7.13",
     "@oconva/qvikchat": "^2.0.4",
     "dotenv": "^16.4.5",
+    "kafkajs": "^2.2.4",
     "zod": "^3.23.8"
   }
 }
