--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon -x tsx lib/index.js",
     "dev": "npm run build && npm run start",
-    "build": "swc --strip-leading-paths --delete-dir-on-start -d lib src && cp src/transac-ai-services/pbs/*.proto lib/transac-ai-services/pbs",
+    "build": "swc --strip-leading-paths --delete-dir-on-start -d lib src && sh copy_proto_files.sh",
     "lint": "pnpm eslint .",
     "format": "pnpm prettier . --write",
     "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest --no-watchman",
@@ -15,9 +15,14 @@
   },
   "keywords": [
     "TransacAI",
+    "transac ai",
+    "transac-ai",
+    "Insights Generation Service",
     "Generative AI",
     "Large Language Models",
-    "LLM"
+    "LLM",
+    "gRPC",
+    "Apache Kafka"
   ],
   "author": "Oconva <oconva.org@gmail.com> (https://github.com/oconva)",
   "license": "MIT",
@@ -26,12 +31,14 @@
     "@swc/cli": "^0.4.0",
     "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
+    "@types/google-protobuf": "^3.15.12",
     "@types/jest": "^29.5.14",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
+    "protoc-gen-js": "^3.21.2",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.1",
@@ -43,9 +50,13 @@
     "@genkit-ai/flow": "^0.5.17",
     "@grpc/grpc-js": "^1.12.2",
     "@grpc/proto-loader": "^0.7.13",
+    "@grpc/reflection": "^1.0.4",
     "@oconva/qvikchat": "^2.0.4",
     "dotenv": "^16.4.5",
+    "google-protobuf": "^3.21.4",
     "kafkajs": "^2.2.4",
+    "protobufjs-cli": "^1.1.3",
+    "winston": "^3.15.0",
     "zod": "^3.23.8"
   }
 }
