--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -13,65 +13,70 @@ spec:
         app: transac-ai-igs
     spec:
       containers:
-        - name: igs-app
-          image: us-east1-docker.pkg.dev/transac-ai/igs-repo/transac-ai-igs-gke:latest
-          ports:
-            # gRPC server port
-            - containerPort: 50051
-          env:
-            - name: GOOGLE_GENAI_API_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: transac-ai-igs-secrets
-                  key: transac-ai-igs-google-genai-api-key
-            - name: PBS_SERVICE_ADDRESS
-              valueFrom:
-                secretKeyRef:
-                  name: transac-ai-igs-secrets
-                  key: transac-ai-igs-pbs-service-address
-            - name: ISS_SERVICE_ADDRESS
-              valueFrom:
-                secretKeyRef:
-                  name: transac-ai-igs-secrets
-                  key: transac-ai-igs-iss-service-address
-            - name: ISS_API_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: transac-ai-igs-secrets
-                  key: transac-ai-igs-iss-api-key
-            - name: BOOTSTRAP_SERVER
-              valueFrom:
-                secretKeyRef:
-                  name: transac-ai-igs-secrets
-                  key: transac-ai-igs-bootstrap-server
-            - name: SECURITY_PROTOCOL
-              valueFrom:
-                secretKeyRef:
-                  name: transac-ai-igs-secrets
-                  key: transac-ai-igs-security-protocol
-            - name: SASL_MECHANISMS
-              valueFrom:
-                secretKeyRef:
-                  name: transac-ai-igs-secrets
-                  key: transac-ai-igs-sasl-mechanisms
-            - name: SASL_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: transac-ai-igs-secrets
-                  key: transac-ai-igs-sasl-username
-            - name: SASL_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: transac-ai-igs-secrets
-                  key: transac-ai-igs-sasl-password
-            - name: KAFKAJS_NO_PARTITIONER_WARNING
-              value: "1"
-          resources:
-            requests:
-              memory: "128Mi"
-              cpu: "50m"
-              ephemeral-storage: "128Mi"
-            limits:
-              memory: "256Mi"
-              cpu: "100m"
-              ephemeral-storage: "256Mi"
+      - name: igs-app
+        image: us-east1-docker.pkg.dev/transac-ai/igs-repo/transac-ai-igs-gke:1.0.4
+        ports:
+        # gRPC server port
+        - containerPort: 8080
+        env:
+        - name: GOOGLE_GENAI_API_KEY
+          valueFrom:
+            secretKeyRef:
+              name: transac-ai-igs-secrets
+              key: transac-ai-igs-google-genai-api-key
+        - name: PBS_SERVICE_ADDRESS
+          valueFrom:
+            secretKeyRef:
+              name: transac-ai-igs-secrets
+              key: transac-ai-igs-pbs-service-address
+        - name: ISS_SERVICE_ADDRESS
+          valueFrom:
+            secretKeyRef:
+              name: transac-ai-igs-secrets
+              key: transac-ai-igs-iss-service-address
+        - name: ISS_API_KEY
+          valueFrom:
+            secretKeyRef:
+              name: transac-ai-igs-secrets
+              key: transac-ai-igs-iss-api-key
+        - name: TRANSAC_AI_IGS_API_KEY
+          valueFrom:
+            secretKeyRef:
+              name: transac-ai-igs-secrets
+              key: transac-ai-igs-igs-api-key
+        - name: BOOTSTRAP_SERVER
+          valueFrom:
+            secretKeyRef:
+              name: transac-ai-igs-secrets
+              key: transac-ai-igs-bootstrap-server
+        - name: SECURITY_PROTOCOL
+          valueFrom:
+            secretKeyRef:
+              name: transac-ai-igs-secrets
+              key: transac-ai-igs-security-protocol
+        - name: SASL_MECHANISMS
+          valueFrom:
+            secretKeyRef:
+              name: transac-ai-igs-secrets
+              key: transac-ai-igs-sasl-mechanisms
+        - name: SASL_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: transac-ai-igs-secrets
+              key: transac-ai-igs-sasl-username
+        - name: SASL_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: transac-ai-igs-secrets
+              key: transac-ai-igs-sasl-password
+        - name: KAFKAJS_NO_PARTITIONER_WARNING
+          value: "1"
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "50m"
+            ephemeral-storage: "256Mi"
+          limits:
+            memory: "512Mi"
+            cpu: "100m"
+            ephemeral-storage: "512Mi"
